--- a/src/style.css
+++ b/src/style.css
@@ -3,24 +3,25 @@
 
 .container {
   width: 100%;
-  background-color: #ddd;
+  background-color: #B7B2B2;
   padding:10px;
   margin-top:10px;
-  border: 4px solid #BC5CCB;
+  border: 4px solid #822c0e;
+  border-radius:4px;
 }
 
 .skills {
   text-align: left;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  color: white;
+
+  
   
   padding:20px;
-  border:5px solid black;
+  border:3px solid #819000;
   color:#000000;
   font-size:25px;
   text-align: right;
   align-content: center;
+  border-radius:4px;
   
 
   
@@ -41,6 +42,7 @@
     background: fixed;
     background: #15310f;
   
+  
 
 }
 
@@ -56,33 +58,52 @@
     border-width: 5px;
     border-color: grey;
       padding:15px;
-      background: #819000;
+      background: #010203;
       border-radius: 6px;
+      border-radius:4px;
 
    
 }
 #textt
 {
   padding:12px;
-  font-size:35px;
-  border: 3px solid #BC5CCB;
+  font-size:45px;
+  border: 3px solid #822c0e;
+  background:#B7B2B2;
 }
 #text
 {
   padding:12px;
-  font-size:35px;
-  border: 3px solid #BC5CCB;
+  font-size:45px;
+  border: 3px solid #822c0e;
+  background:#B7B2B2;
 }
 #smokedef
 {
   padding:12px;
   font-size:25px;
-  border: 3px solid #BC5CCB;
+  border: 3px solid #822c0e;
+  background: #515b4d;
   margin-top:5px;
+  color:#badaaf;
+  text-align: center;
 }
 h1{
   
   font-weight:bold;
-  font-size:30px;
+  font-size:45px;
   color:#685C0F;
+}
+
+
+.marker{
+  width:40px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-align: center;
+}
+.marker.selected{
+  background-color: yellow;
+  border-color: black;
 }
