--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   background-color: #B7B2B2;
   padding:10px;
   margin-top:10px;
-  border: 4px solid #822c0e;
+  border: 3px solid #822c0e;
   border-radius:4px;
 }
 
@@ -15,13 +15,15 @@
 
   
   
-  padding:20px;
-  border:3px solid #819000;
+  padding:15px;
+  font-size:15px;
+  border:2px solid #819000;
   color:#000000;
-  font-size:25px;
+
   text-align: right;
   align-content: center;
-  border-radius:4px;
+  border-radius:30px;
+
   
 
   
@@ -67,34 +69,65 @@
 #textt
 {
   padding:12px;
-  font-size:45px;
-  border: 3px solid #822c0e;
-  background:#B7B2B2;
+  font-size:35px;
+  border: 2px solid #822c0e;
+  background: #515b4d;
+  border-radius: 10px;
+  color:#badaaf;
+  text-align: center;
 }
 #text
 {
   padding:12px;
   font-size:45px;
-  border: 3px solid #822c0e;
+  border: 2px solid #822c0e;
   background:#B7B2B2;
+  border-radius: 5px;
 }
 #smokedef
 {
   padding:12px;
   font-size:25px;
-  border: 3px solid #822c0e;
+  border: 2px solid #822c0e;
   background: #515b4d;
   margin-top:5px;
   color:#badaaf;
   text-align: center;
+  border-radius: 10px;
+
 }
 h1{
   
   font-weight:bold;
-  font-size:45px;
+  font-size:30px;
   color:#685C0F;
 }
+h2
+{
+  font-weight:bolder;
+  font-size:37px;
+  color :orange;
+  margin:20px;
+  padding:12px;
+  
+  width:97%;
+  background:#000000;
+}
 
+@media only screen and (max-width: 768px) 
+{
+  h2
+  {
+    margin-right:20px;
+  }
+
+  .skills
+  {
+    padding:9px;
+    font-size:9px;
+  }
+
+}
 
 .marker{
   width:40px;
