--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 
 .container {
   width: 100%;
-  background-color: #B7B2B2;
+  background-color: black;
   padding:10px;
   margin-top:10px;
   border: 3px solid #822c0e;
@@ -23,6 +23,7 @@
   text-align: right;
   align-content: center;
   border-radius:30px;
+  font-weight: bolder;
 
   
 
@@ -109,13 +110,18 @@ h2
   color :orange;
   margin:20px;
   padding:12px;
+  margin-top:70px;
   
-  width:97%;
-  background:#000000;
+  
 }
 
-@media only screen and (max-width: 768px) 
+@media only screen and (max-width: 500px) 
 {
+
+  #maps
+  {
+    width:200px;
+  }
   h2
   {
     margin-right:20px;
@@ -126,17 +132,26 @@ h2
     padding:9px;
     font-size:9px;
   }
+ 
 
 }
 
 .marker{
   width:40px;
-  background-color: white;
-  border: 1px solid black;
+  background: red;
+  border-color: 20px solid black;
   border-radius: 5px;
   text-align: center;
+  color:white;
+  padding:10px;
 }
-.marker.selected{
-  background-color: yellow;
-  border-color: black;
+
+
+#maps
+{
+  height:400px;
+  width:420px;
+  margin:20px;
+  margin-top:20px;
+  border:10px solid black;
 }
