--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,8 @@
 
   
   
-  padding:15px;
-  font-size:15px;
+  padding:20px;
+  font-size:20px;
   border:2px solid #819000;
   color:#000000;
 
@@ -111,7 +111,7 @@ h2
   color :orangered;
   margin:20px;
   padding:12px;
-  margin-top:20px;
+  margin-top:35px;
   
   
 }
@@ -131,7 +131,7 @@ h2
 
 #maps
 {
-  height:600px;
+  height:500x;
  
   margin:10px;
   border:10px solid black;
