--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,15 @@
 
 .container {
   width: 100%;
-   background: #515b4d;
+   background: #000000;
   padding:10px;
 
   border: 15px solid #515b4d;;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  border: 2px solid #822c0e;
+ 
+
+ 
 
 
 }
@@ -29,6 +31,7 @@
   border-top-right-radius:30px;
   border-bottom-right-radius: 30px;
   font-weight: bolder;
+  
 
   
 
@@ -71,29 +74,32 @@
 {
   padding:12px;
   font-size:29px;
-  border: 2px solid #822c0e;
   background: #515b4d;
-  border-radius: 10px;
+  border-radius: 3px;
   color:#badaaf;
+   padding-left:20px;
 
 }
 #text
 {
-  padding:12px;
+  padding:15px;
   font-size:45px;
-  border: 2px solid #822c0e;
+  padding-left:15px;
   background: #515b4d;
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius:5px;
   color:#badaaf;
 }
 #smokedef
 {
+ 
   padding:12px;
+  padding-left:20px;
   font-size:25px;
-  border: 2px solid #822c0e;
+ 
   border-top-style: hidden;
   background: #515b4d;
-
+ 
   color:#badaaf;
   
   
@@ -127,13 +133,15 @@ h2
 
 
 .marker{
-  width:40px;
+  width:45px;
+  height:50px;
   background: red;
   border-color: 20px solid black;
   border-radius: 5px;
   text-align: center;
   color:white;
   padding:10px;
+  border: 5px solid black;
 }
 
 
@@ -156,9 +164,20 @@ h2
 
   .skills
   {
-    padding:19px;
-    font-size:19px;
+    padding:5px;
+    font-size:13px;
   }
- 
+  .marker{
+    width:40px;
+    height:45px;
+    background: red;
+    border: 5px solid black;
+    border-radius: 5px;
+    color:white;
+    padding:6px;
+    font-size:10px;
+    text-align: center;
+    align-content:center;
+  }
 
 }
