--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@
   body {
  
 
-    background: fixed;
+   
     background: #0B253F;
   
   
@@ -114,7 +114,7 @@ h2
 {
   font-weight:bolder;
   font-size:37px;
-  color :orangered;
+  color :#eee;
   margin:20px;
   padding:12px;
   margin-top:55px;
@@ -129,6 +129,7 @@ h2
   border:10px solid black;
   display: flex;
   flex-direction:column;
+  background: #eee;
 }
 
 
