--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,10 @@
 
 .container {
   width: 100%;
-   background: #000000;
-  padding:10px;
-
-  border: 15px solid #515b4d;;
+  background: #000000;
+  padding:5px;
+  
+  border: 5px solid #515b4d;;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
  
@@ -21,16 +21,16 @@
 
   
   
-  padding:25px;
+  padding:15px;
   font-size:30px;
   border:2px solid #819000;
   color:#000000;
 
   text-align: right;
   align-content: center;
-  border-top-right-radius:30px;
-  border-bottom-right-radius: 30px;
+
   font-weight: bolder;
+  
   
 
   
@@ -46,7 +46,12 @@
  
 
    
-    background: #0B253F;
+   
+    background-image: url("bac.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   
   
 
@@ -64,7 +69,7 @@
     border-width: 5px;
     border-color: grey;
       padding:15px;
-      background: #3F250B;
+      background:#0B253F;
       border-radius: 6px;
       border-radius:4px;
 
@@ -74,10 +79,11 @@
 {
   padding:12px;
   font-size:25px;
-  background: #515b4d;
+  background: #000000;
   border-radius: 3px;
-  color:#badaaf;
+  color:white;
    padding-left:20px;
+   
 
 }
 #text
@@ -85,10 +91,12 @@
   padding:15px;
   font-size:45px;
   padding-left:15px;
-  background: #515b4d;
+ 
   border-top-left-radius: 5px;
   border-top-right-radius:5px;
   color:#badaaf;
+  border: 5px solid #515b4d;
+  background: #000000;
 }
 #smokedef
 {
@@ -98,9 +106,14 @@
   font-size:25px;
  
   border-top-style: hidden;
-  background: #515b4d;
+  background: #000000;
  
-  color:#badaaf;
+  color:white;
+  border-left: 5px solid #515b4d;
+  border-right: 5px solid #515b4d;
+  border-bottom: 1px solid #515b4d;
+
+
   
   
 }
@@ -126,7 +139,7 @@ h2
   height:500x;
  
   margin:10px;
-  border:10px solid black;
+  border:30px solid black;
   display: flex;
   flex-direction:column;
   background: #eee;
@@ -165,8 +178,8 @@ h2
 
   .skills
   {
-    padding:5px;
-    font-size:13px;
+    padding:15px;
+    font-size:16px;
   }
   .marker{
     width:40px;
